remove duplicate section from README